# Esp32-OTA

./: Myfirst.code-workspace
02. Loogging_esp32/: CMakeLists.txt
02. Loogging_esp32/main/: main.c
03. Delay_esp32/main/: main.c
04. Random_Generator for Dice/: CMakeLists.txt
04. Random_Generator for Dice/main/: main.c
05. Blinky/: CMakeLists.txt
05. Blinky/main/: main.c
06. Capturing Input/: CMakeLists.txt
06. Capturing Input/main/: main.c
07. Led control with touch sensor/: CMakeLists.txt
07. Led control with touch sensor/main/: main.c
11. chip_info/: CMakeLists.txt
11. chip_info/main/: main.c
12. Dual-core led blinking_esp32/: CMakeLists.txt
12. Dual-core led blinking_esp32/main/: main.c
13. Wifi-station Mode/: sdkconfig  sdkconfig.ci
14. Wifi-softAP Mode/: sdkconfig
18. HTTP server implementation/: CMakeLists.txt  sdkconfig  sdkconfig.old
18. HTTP server implementation/main/: main.c
19. OTA Implementation/: CMakeLists.txt
19. OTA Implementation/main/: CMakeLists.txt  Kconfig.projbuild  main.c
19a. OTA1 wireless implementation/: CMakeLists.txt  sdkconfig  sdkconfig.old
19a. OTA1 wireless implementation/main/: CMakeLists.txt  main.c
chip_info/main/: main.c
